--- a/app.yaml
+++ b/app.yaml
@@ -6,3 +6,13 @@ handlers:
 
 - url: /.*
   script: auto
+
+# - url: /static/images
+#   static_dir: static/images
+#   application_readable: true
+#   secure: always
+
+# - url: /static/images
+#   static_dir: gs://your-bucket-name/images
+#   application_readable: true
+#   secure: always
