--- a/app.yaml
+++ b/app.yaml
@@ -7,12 +7,12 @@ handlers:
 - url: /.*
   script: auto
 
-# - url: /static/images
-#   static_dir: static/images
-#   application_readable: true
-#   secure: always
+- url: /static/images
+  static_dir: static/images
+  application_readable: true
+  secure: always
 
-# - url: /static/images
-#   static_dir: gs://your-bucket-name/images
-#   application_readable: true
-#   secure: always
+- url: /static/images
+  static_dir: gs://menjadi-gcloud-engineer.appspot.com/images
+  application_readable: true
+  secure: always
