--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,7 @@ runtime: python39  # Choose the appropriate Python runtime version.
 
 handlers:
 - url: /images
-  static_dir: https://storage.googleapis.com/menjadi-gcloud-engineer.appspot.com/images
+  static_dir: gs://menjadi-gcloud-engineer.appspot.com/images
   secure: always
 - url: /static
   static_dir: static  # This is the directory where your static files are located (e.g., CSS, JS, images).
