--- a/app.yaml
+++ b/app.yaml
@@ -2,6 +2,6 @@ runtime: python39  # Choose the appropriate Python runtime version.
 
 handlers:
 - url: /static
-  static_dir: static  # This is the directory where your static files are located (e.g., CSS, JS, images).
+  static_dir: static  # This is the directory where your static files are located (e.g., CSS, JS).
 - url: /.*
   script: auto
